--- a/index.html
+++ b/index.html
@@ -387,15 +387,6 @@
                         <h3>Perfumes</h3>
                     </div>
                 </div>
-                <!--<div class="buy_category_content">
-                    <div class="buy_category_content_image">
-                        <img src="./icons/oculos-category.png" alt="Acessórios">
-                    </div>
-                    <div class="buy_category_content_title">
-                        <h3>Acessórios</h3>
-                    </div>
-                </div>
-                -->
             </div>
             <div class="brand_wrapper">
                 <div class="brand_content">
@@ -833,11 +824,7 @@
                         <div class="product_overlay">
                             <div class="product_info">
                                 <div class="size_options">
-                                    <span>PP</span>
-                                    <span>P</span>
-                                    <span>M</span>
-                                    <span>G</span>
-                                    <span>GG</span>
+                                    <span>TU</span>
                                 </div>
                                 <button class="buy_button">COMPRE AGORA</button>
                             </div>
@@ -864,11 +851,7 @@
                         <div class="product_overlay">
                             <div class="product_info">
                                 <div class="size_options">
-                                    <span>PP</span>
-                                    <span>P</span>
-                                    <span>M</span>
-                                    <span>G</span>
-                                    <span>GG</span>
+                                    <span>TU</span>
                                 </div>
                                 <button class="buy_button">COMPRE AGORA</button>
                             </div>
@@ -895,11 +878,7 @@
                         <div class="product_overlay">
                             <div class="product_info">
                                 <div class="size_options">
-                                    <span>PP</span>
-                                    <span>P</span>
-                                    <span>M</span>
-                                    <span>G</span>
-                                    <span>GG</span>
+                                    <span>TU</span>
                                 </div>
                                 <button class="buy_button">COMPRE AGORA</button>
                             </div>
@@ -926,11 +905,7 @@
                         <div class="product_overlay">
                             <div class="product_info">
                                 <div class="size_options">
-                                    <span>PP</span>
-                                    <span>P</span>
-                                    <span>M</span>
-                                    <span>G</span>
-                                    <span>GG</span>
+                                    <span>TU</span>
                                 </div>
                                 <button class="buy_button">COMPRE AGORA</button>
                             </div>
@@ -957,11 +932,7 @@
                         <div class="product_overlay">
                             <div class="product_info">
                                 <div class="size_options">
-                                    <span>PP</span>
-                                    <span>P</span>
-                                    <span>M</span>
-                                    <span>G</span>
-                                    <span>GG</span>
+                                    <span>TU</span>
                                 </div>
                                 <button class="buy_button">COMPRE AGORA</button>
                             </div>
@@ -988,11 +959,7 @@
                         <div class="product_overlay">
                             <div class="product_info">
                                 <div class="size_options">
-                                    <span>PP</span>
-                                    <span>P</span>
-                                    <span>M</span>
-                                    <span>G</span>
-                                    <span>GG</span>
+                                    <span>TU</span>
                                 </div>
                                 <button class="buy_button">COMPRE AGORA</button>
                             </div>
@@ -1028,11 +995,7 @@
                         <div class="product_overlay">
                             <div class="product_info">
                                 <div class="size_options">
-                                    <span>PP</span>
-                                    <span>P</span>
-                                    <span>M</span>
-                                    <span>G</span>
-                                    <span>GG</span>
+                                    <br>
                                 </div>
                                 <button class="buy_button">COMPRE AGORA</button>
                             </div>
@@ -1059,11 +1022,7 @@
                         <div class="product_overlay">
                             <div class="product_info">
                                 <div class="size_options">
-                                    <span>PP</span>
-                                    <span>P</span>
-                                    <span>M</span>
-                                    <span>G</span>
-                                    <span>GG</span>
+                                    <br>
                                 </div>
                                 <button class="buy_button">COMPRE AGORA</button>
                             </div>
@@ -1090,11 +1049,7 @@
                         <div class="product_overlay">
                             <div class="product_info">
                                 <div class="size_options">
-                                    <span>PP</span>
-                                    <span>P</span>
-                                    <span>M</span>
-                                    <span>G</span>
-                                    <span>GG</span>
+                                    <br>
                                 </div>
                                 <button class="buy_button">COMPRE AGORA</button>
                             </div>
@@ -1121,11 +1076,7 @@
                         <div class="product_overlay">
                             <div class="product_info">
                                 <div class="size_options">
-                                    <span>PP</span>
-                                    <span>P</span>
-                                    <span>M</span>
-                                    <span>G</span>
-                                    <span>GG</span>
+                                    <br>
                                 </div>
                                 <button class="buy_button">COMPRE AGORA</button>
                             </div>
@@ -1152,11 +1103,7 @@
                         <div class="product_overlay">
                             <div class="product_info">
                                 <div class="size_options">
-                                    <span>PP</span>
-                                    <span>P</span>
-                                    <span>M</span>
-                                    <span>G</span>
-                                    <span>GG</span>
+                                    <br>
                                 </div>
                                 <button class="buy_button">COMPRE AGORA</button>
                             </div>
@@ -1183,11 +1130,7 @@
                         <div class="product_overlay">
                             <div class="product_info">
                                 <div class="size_options">
-                                    <span>PP</span>
-                                    <span>P</span>
-                                    <span>M</span>
-                                    <span>G</span>
-                                    <span>GG</span>
+                                    <br>
                                 </div>
                                 <button class="buy_button">COMPRE AGORA</button>
                             </div>
