Código da versão mobile

--- a/index.html
+++ b/index.html
@@ -18,35 +18,45 @@
     <header class="header">
         <div class="header_wrapper">
             <div class="header_topbar">
+                <span class="prev icon">&#x2329;</span>
                 <ul>
                     <li>
-                        <div>
-                            <span>
-                                Compre em até 6x sem juros
-                            </span>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <span>
-                                Frete grátis em compras acima de R$600
-                            </span>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <span>
-                                Compre marcas exclusivas com segurança
-                            </span>
-                        </div>
+                        <span>
+                            Compre em até 6x sem juros
+                        </span>
                     </li>
                 </ul>
+                <span class="next icon">&#x232A;</span>
             </div>
             <div class="header_content">
                 <div class="container">
-                    <div class="header_content_searchbar">
-                        <input type="text" name="search" placeholder="BUSCAR">
-                        <i class="fas fa-search"></i>
+                    <div class="header_nav-wrapper">
+                        <nav>
+                            <div class="dropdown">
+                                <a href="">
+                                    <div class="hamburger-menu">
+                                        <div class="line"></div>
+                                        <div class="line"></div>
+                                        <div class="line"></div>
+                                    </div>
+                                </a>
+                                <div class="dropdown content">
+                                    <div class="grid_container">
+                                        <div>
+                                            <span>Roupas</span>
+                                            <span>Calçados</span>
+                                            <span>Acessórios</span>
+                                            <span>Perfumes</span>
+                                            <span>Marcas</span>
+                                            <span>Infantil</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </nav>
+                        <div class="like_container">
+                            <img src="./icons/love.png" alt="Coração">
+                        </div>
                     </div>
                     <div>
                         <img class="logo" src="./icons/logo (1).png" alt="logo Tatuapé">
@@ -54,7 +64,7 @@
                     <div class="header_content_nav_icons">
                         <ul>
                             <li>
-                                <img src="./icons/love.png" alt="Coração">
+                                
                             </li>
                             <li>
                                 <img src="./icons/account.png" alt="Conta">
@@ -65,276 +75,25 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-            <div class="header_nav-wrapper">
-                <nav>
-                    <div class="dropdown">
-                        <a href="">
-                            TODA A LOJA
-                            <div class="hamburger-menu">
-                                <div class="line"></div>
-                                <div class="line"></div>
-                                <div class="line"></div>
-                            </div>
-                        </a>
-                        <div class="dropdown content">
-                            <div class="grid_container">
-                                <div>
-                                    <span>Roupas</span>
-                                    <span>Calçados</span>
-                                    <span>Acessórios</span>
-                                    <span>Perfumes</span>
-                                    <span>Marcas</span>
-                                    <span>Infantil</span>
-                                </div>
-                                <div>
-                                    <span>Roupas</span>
-                                    <span>Calçados</span>
-                                    <span>Acessórios</span>
-                                    <span>Perfumes</span>
-                                    <span>Marcas</span>
-                                    <span>Infantil</span>
-                                </div>
-                                <div>
-                                    <span>Roupas</span>
-                                    <span>Calçados</span>
-                                    <span>Acessórios</span>
-                                    <span>Perfumes</span>
-                                    <span>Marcas</span>
-                                    <span>Infantil</span>
-                                </div>
-                                <div>
-                                    <span>Roupas</span>
-                                    <span>Calçados</span>
-                                    <span>Acessórios</span>
-                                    <span>Perfumes</span>
-                                    <span>Marcas</span>
-                                    <span>Infantil</span>
-                                </div>
-                                <div>
-                                    <img src="./icons/roupa-category.png" alt="">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="dropdown">
-                        <a href="">
-                            ROUPAS
-                            <i class="fas fa-caret-down"></i>
-                        </a>
-                        <div class="dropdown content">
-                            <div class="grid_container">
-                                <div>
-                                    <span>Roupas</span>
-                                    <span>Calçados</span>
-                                    <span>Acessórios</span>
-                                    <span>Perfumes</span>
-                                    <span>Marcas</span>
-                                    <span>Infantil</span>
-                                </div>
-                                <div>
-                                    <span>Roupas</span>
-                                    <span>Calçados</span>
-                                    <span>Acessórios</span>
-                                    <span>Perfumes</span>
-                                    <span>Marcas</span>
-                                    <span>Infantil</span>
-                                </div>
-                                <div>
-                                    <span>Roupas</span>
-                                    <span>Calçados</span>
-                                    <span>Acessórios</span>
-                                    <span>Perfumes</span>
-                                    <span>Marcas</span>
-                                    <span>Infantil</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="dropdown">
-                        <a href="">
-                            CALÇADOS
-                            <i class="fas fa-caret-down"></i>
-                        </a>
-                        <div class="dropdown content">
-                            <div class="grid_container">
-                                <div>
-                                    <span>Roupas</span>
-                                    <span>Calçados</span>
-                                    <span>Acessórios</span>
-                                    <span>Perfumes</span>
-                                    <span>Marcas</span>
-                                    <span>Infantil</span>
-                                </div>
-                                <div>
-                                    <span>Roupas</span>
-                                    <span>Calçados</span>
-                                    <span>Acessórios</span>
-                                    <span>Perfumes</span>
-                                    <span>Marcas</span>
-                                    <span>Infantil</span>
-                                </div>
-                                <div>
-                                    <span>Roupas</span>
-                                    <span>Calçados</span>
-                                    <span>Acessórios</span>
-                                    <span>Perfumes</span>
-                                    <span>Marcas</span>
-                                    <span>Infantil</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="dropdown">
-                        <a href="">
-                            ACESSÓRIOS
-                            <i class="fas fa-caret-down"></i>
-                        </a>
-                        <div class="dropdown content">
-                            <div class="grid_container">
-                                <div>
-                                    <span>Roupas</span>
-                                    <span>Calçados</span>
-                                    <span>Acessórios</span>
-                                    <span>Perfumes</span>
-                                    <span>Marcas</span>
-                                    <span>Infantil</span>
-                                </div>
-                                <div>
-                                    <span>Roupas</span>
-                                    <span>Calçados</span>
-                                    <span>Acessórios</span>
-                                    <span>Perfumes</span>
-                                    <span>Marcas</span>
-                                    <span>Infantil</span>
-                                </div>
-                                <div>
-                                    <span>Roupas</span>
-                                    <span>Calçados</span>
-                                    <span>Acessórios</span>
-                                    <span>Perfumes</span>
-                                    <span>Marcas</span>
-                                    <span>Infantil</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="dropdown">
-                        <a href="">
-                            PERFUMES
-                            <i class="fas fa-caret-down"></i>
-                        </a>
-                        <div class="dropdown content">
-                            <div class="grid_container">
-                                <div>
-                                    <span>Roupas</span>
-                                    <span>Calçados</span>
-                                    <span>Acessórios</span>
-                                    <span>Perfumes</span>
-                                    <span>Marcas</span>
-                                    <span>Infantil</span>
-                                </div>
-                                <div>
-                                    <span>Roupas</span>
-                                    <span>Calçados</span>
-                                    <span>Acessórios</span>
-                                    <span>Perfumes</span>
-                                    <span>Marcas</span>
-                                    <span>Infantil</span>
-                                </div>
-                                <div>
-                                    <span>Roupas</span>
-                                    <span>Calçados</span>
-                                    <span>Acessórios</span>
-                                    <span>Perfumes</span>
-                                    <span>Marcas</span>
-                                    <span>Infantil</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="dropdown">
-                        <a href="">
-                            MARCAS
-                            <i class="fas fa-caret-down"></i>
-                        </a>
-                        <div class="dropdown content">
-                            <div class="grid_container">
-                                <div>
-                                    <span>Roupas</span>
-                                    <span>Calçados</span>
-                                    <span>Acessórios</span>
-                                    <span>Perfumes</span>
-                                    <span>Marcas</span>
-                                    <span>Infantil</span>
-                                </div>
-                                <div>
-                                    <span>Roupas</span>
-                                    <span>Calçados</span>
-                                    <span>Acessórios</span>
-                                    <span>Perfumes</span>
-                                    <span>Marcas</span>
-                                    <span>Infantil</span>
-                                </div>
-                                <div>
-                                    <span>Roupas</span>
-                                    <span>Calçados</span>
-                                    <span>Acessórios</span>
-                                    <span>Perfumes</span>
-                                    <span>Marcas</span>
-                                    <span>Infantil</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="dropdown">
-                        <a href="">
-                            INFANTIL
-                            <i class="fas fa-caret-down"></i>
-                        </a>
-                        <div class="dropdown content">
-                            <div class="grid_container">
-                                <div>
-                                    <span>Roupas</span>
-                                    <span>Calçados</span>
-                                    <span>Acessórios</span>
-                                    <span>Perfumes</span>
-                                    <span>Marcas</span>
-                                    <span>Infantil</span>
-                                </div>
-                                <div>
-                                    <span>Roupas</span>
-                                    <span>Calçados</span>
-                                    <span>Acessórios</span>
-                                    <span>Perfumes</span>
-                                    <span>Marcas</span>
-                                    <span>Infantil</span>
-                                </div>
-                                <div>
-                                    <span>Roupas</span>
-                                    <span>Calçados</span>
-                                    <span>Acessórios</span>
-                                    <span>Perfumes</span>
-                                    <span>Marcas</span>
-                                    <span>Infantil</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </nav>
+                <div class="header_content_searchbar">
+                    <span>BUSCA</span>
+                    <input type="text" name="search" placeholder="EX. CAMISETA">
+                    <img src="./icons/search-icon.svg" alt="">
+                </div>
             </div>
         </div>
     </header>
     <main>
         <section class="banner_slider">
-            <div class="slide active" style="background-image: url('./icons/plano-fundo-hero-1.png');">
+            <div class="slide active" style="background-image: url('./icons/banner-fundo-1.png');">
                 <div class="slide_content1">
                     <div class="logos">
-                        <img src="./icons/logo-marca-hero-1.png" alt="Logo Tatuapé">
-                        <img class="logo_emporio" src="./icons/empori-logo-hero-1.png" alt="Logo Emporio">
+                        <img class="logo_tatuape" src="./icons/logo-marca-hero-1.png" alt="Logo Tatuapé">
+                        <div class="separator"></div>
+                        <img src="./icons/Aempori-logo-hero-1.png" alt="Logo Emporio">
                     </div>
                     <h2>NOVIDADES</h2>
-                    <span>RELOGIO PULSO <b>EMPORIO ARMANI BLACK</b></span>
+                    <span>RELOGIO PULSO <br> <b>EMPORIO ARMANI BLACK</b></span>
                     <button class="buy-button">COMPRAR AGORA</button>
                 </div>
             </div>
