Fix logos do primeiro banner

--- a/index.html
+++ b/index.html
@@ -330,8 +330,9 @@
             <div class="slide active" style="background-image: url('./icons/plano-fundo-hero-1.png');">
                 <div class="slide_content1">
                     <div class="logos">
-                        <img src="./icons/logo-marca-hero-1.png" alt="Logo Tatuapé">
-                        <img class="logo_emporio" src="./icons/empori-logo-hero-1.png" alt="Logo Emporio">
+                        <img class="logo_tatuape" src="./icons/logo-marca-hero-1.png" alt="Logo Tatuapé">
+                        <div class="separator"></div>
+                        <img src="./icons/Aempori-logo-hero-1.png" alt="Logo Emporio">
                     </div>
                     <h2>NOVIDADES</h2>
                     <span>RELOGIO PULSO <b>EMPORIO ARMANI BLACK</b></span>
