Fix no buy category

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                     </div>
                     <h2>NOVIDADES</h2>
                     <span>RELOGIO PULSO <b>EMPORIO ARMANI BLACK</b></span>
-                    <button class="buy-button">COMPRAR AGORA</button>
+                    <button class="buy-button">COMPRE AGORA</button>
                 </div>
             </div>
             <div class="slide" style="background-image: url('./icons/plano-fundo-hero-2.png');"></div>
@@ -361,8 +361,7 @@
                 <div class="buy_category_content">
                     <div class="buy_category_content_image">
                         <img src="./icons/roupa-category.png" alt="Roupas">
-                        <span>Camiseta</span>
-                        <span>R$ 249,00</span>
+                        <button>COMPRE AGORA</button>
                     </div>
                     <div class="buy_category_content_title">
                         <h3>Roupas</h3>
@@ -371,8 +370,7 @@
                 <div class="buy_category_content">
                     <div class="buy_category_content_image">
                         <img src="./icons/tenis-category.png" alt="Calçados">
-                        <span>Camiseta</span>
-                        <span>R$ 249,00</span>
+                        <button>COMPRE AGORA</button>
                     </div>
                     <div class="buy_category_content_title">
                         <h3>Calçados</h3>
@@ -381,11 +379,19 @@
                 <div class="buy_category_content">
                     <div class="buy_category_content_image">
                         <img src="./icons/perfumo-category.png" alt="Perfumes">
-                        <span>Camiseta</span>
-                        <span>R$ 249,00</span>
+                        <button>COMPRE AGORA</button>
                     </div>
                     <div class="buy_category_content_title">
                         <h3>Perfumes</h3>
+                    </div>
+                </div>
+                <div class="buy_category_content">
+                    <div class="buy_category_content_image">
+                        <img src="./icons/perfumo-category.png" alt="Perfumes">
+                        <button>COMPRE AGORA</button>
+                    </div>
+                    <div class="buy_category_content_title">
+                        <h3>Acessórios</h3>
                     </div>
                 </div>
             </div>
