Versão mobile finalizada

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="container">
                     <div class="header_nav-wrapper">
                         <nav>
-                            <div class="dropdown">
+                            <div class="dropdown_header">
                                 <a href="">
                                     <div class="hamburger-menu">
                                         <div class="line"></div>
@@ -1011,7 +1011,7 @@
             </div>
         </section>
     </main>
-    <!--<footer>
+    <footer>
         <div class="about">
             <div class="about_logo">
                 <img src="./icons/TC-Logo-1.png" alt="Logo Tatuapé Conceito">
@@ -1031,11 +1031,11 @@
             <div>
                 <h2>ASSINE NOSSA NEWSLETTER</h2>
                 <form action="">
-                    <div>
+                    <div class="input_container">
                         <label for="name"></label>
                         <input placeholder="Nome:" type="text" id="name" autocomplete="on">
                     </div>
-                    <div>
+                    <div class="input_container">
                         <label for="email"></label>
                         <input placeholder="E-mail:" type="text" id="email" autocomplete="on">
                     </div>
@@ -1050,85 +1050,40 @@
             </div>
         </div>
         <div class="footer_wrapper">
+            <div class="dropdowns_container">
+                <div class="col">
+                    <h3 class="h3 arrow_down">FALE CONOSCO</h3>
+                    <ul class="dropdown">
+                        <li>Email: contato@exemplo.com</li>
+                        <li>Telefone: (11) 1234-5678</li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3 class="h3 arrow_down">SOBRE</h3>
+                    <ul class="dropdown">
+                        <li>Email: contato@exemplo.com</li>
+                        <li>Telefone: (11) 1234-5678</li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3 class="h3 arrow_down">MEUS DADOS</h3>
+                    <ul class="dropdown">
+                        <li>Email: contato@exemplo.com</li>
+                        <li>Telefone: (11) 1234-5678</li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3 class="h3 arrow_down">POLÍTICAS</h3>
+                    <ul class="dropdown">
+                        <li>Email: contato@exemplo.com</li>
+                        <li>Telefone: (11) 1234-5678</li>
+                    </ul>
+                </div>
+            </div>
             <div class="footer_links">
-                <div class="col">
-                    <h3>Fale Conosco</h3>
-                    <ul>
-                        <li>
-                            <a href="https://wa.me/5511934478717?text=Ol%C3%A1%2C+visitei+o+site+da+Tatuap%C3%A9+Conceito+e+gostaria+de+algumas+informa%C3%A7%C3%B5es.+Pode+me+ajudar%3F"
-                                target="_blank">
-                                <span>WhatsApp <br> (11) 93447-8717</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <span>Fixo <br> 226-6763 (Loja Fisica) <br> 29429950 (Escritório)</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <span>E-mail <br> vendasonline@tatuapeconceito.com.br</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col">
-                    <h3>Tatuapé Conceito</h3>
-                    <ul>
-                        <li>
-                            <a href="">
-                                <span>Nossa História</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <span>Política de Privacidade</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <span>Termos e Condições</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col">
-                    <h3>Informações</h3>
-                    <ul>
-                        <li>
-                            <a href="">
-                                <span>Trocas e Devoluções</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <span>Dúvidas Frequentes</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <span>Venda Assistida</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col">
-                    <h3>Endereço</h3>
-                    <ul>
-                        <li>
-                            <a href="">
-                                <span>R. Tuiuti, 2636 <br> Tatuapé - São Paulo <br> SP - 03307-005</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <span>Horário de funcionamento - Loja física <br> Segunda a Sábado das 10h às 20h</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
                 <div class="col_footer_pay-sec">
                     <div class="footer_payments">
+                        <p>FORMAS DE PAGAMENTO</p>
                         <ol>
                             <li class="visa"></li>
                             <li class="master"></li>
@@ -1174,11 +1129,10 @@
             <div class="copy">
                 <p>&copy; 2023 - <b>TATUAPÉ CONCEITO</b> COMÉRCIO DE ROUPAS E ACESSÓRIOS LTDA CNPJ: 17.521.536/0001-55
                 </p>
-                <img class="logo_convertr" src="./icons/logoconvertr.svg" alt="Logo convertr">
             </div>
+            <img class="logo_convertr" src="./icons/logoconvertr.svg" alt="Logo convertr">
         </div>
     </footer>
--->
     <script src="script.js"></script>
 </body>
 
